Revised definition of and examples to the periodic convolution, minor edits, common plotting style, re-run examples, included FFT/fast convolution notebooks in CI

--- a/discrete_fourier_transform/definition.ipynb
+++ b/discrete_fourier_transform/definition.ipynb
@@ -35,7 +35,7 @@
     "x[k] = \\frac{1}{N} \\sum_{\\mu=0}^{N-1} X[\\mu] \\; e^{j \\mu \\frac{2 \\pi}{N} k}\n",
     "\\end{equation}\n",
     "\n",
-    "The kernel $e^{j \\mu \\frac{2 \\pi}{N} k}$ of the IDFT is periodic with respect to the sample index $k$. It follows that the IDFT $x[k] = \\text{IDFT}_M \\{ X[\\mu] \\}$ is periodic\n",
+    "The kernel $e^{j \\mu \\frac{2 \\pi}{N} k}$ of the IDFT is periodic with respect to the sample index $k$. It follows that $x[k] = \\text{IDFT}_M \\{ X[\\mu] \\}$ is periodic\n",
     "\n",
     "\\begin{equation}\n",
     "x[k] = x[k + \\nu N]\n",
@@ -58,7 +58,7 @@
    "source": [
     "### Link to the Discrete-Time Fourier Transform\n",
     "\n",
-    "The [discrete-time Fourier transform](../discrete_time_fourier_transform/definition.ipynb) (DTFT) $X(e^{j \\Omega}) = \\mathcal{F}_* \\{ x[k] \\}$ of a causal signal of finite length $x[k] = 0$ for $k \\in \\mathbb{Z} \\setminus \\{0,1,\\dots, N-1 \\}$ is continuous with respect to the normalized angular frequency $\\Omega$. The DFT $X[\\mu]$ of the same signal is discrete. In order to derive the relation between both transforms, the definition of the DTFT is compared with the definition of the DFT. This reveals that both are linked by\n",
+    "The [discrete-time Fourier transform](../discrete_time_fourier_transform/definition.ipynb) (DTFT) $X(e^{j \\Omega}) = \\mathcal{F}_* \\{ x[k] \\}$ of a causal signal of finite length $x[k] = 0$ for $k \\in \\mathbb{Z} \\setminus \\{0,1,\\dots, N-1 \\}$ is continuous with respect to the normalized angular frequency $\\Omega$. The DFT $X[\\mu]$ of the same signal is discrete. In order to derive the relation between both transforms, the definition of the DTFT is compared to the definition of the DFT. This reveals that both are linked by\n",
     "\n",
     "\\begin{equation}\n",
     "X[\\mu] = X(e^{j \\Omega}) \\big\\rvert_{\\Omega = \\mu \\frac{2 \\pi}{N}}\n",
@@ -373,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
