--- a/discrete_fourier_transform/fast_convolution.ipynb
+++ b/discrete_fourier_transform/fast_convolution.ipynb
@@ -36,19 +36,23 @@
     "\n",
     "The resulting signal $y[k]$ is of finite length $M = N+L-1$. Without loss of generality it is assumed in the following that $N \\leq L$. The computation of $y[k]$ for $k=0,1, \\dots, M-1$ requires $M \\cdot N$ multiplications and $M \\cdot (N-1)$ additions. The computational complexity of the convolution is consequently [on the order of](https://en.wikipedia.org/wiki/Big_O_notation) $\\mathcal{O}(M \\cdot N)$.\n",
     "\n",
-    "The periodic convolution of the two signals $x_L[k]$ and $h_N[k]$ is defined as\n",
+    "The [periodic (or circular/cyclic) convolution](https://en.wikipedia.org/wiki/Circular_convolution) of two signals $x_L[k]$ and $h_N[k]$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
-    "x_L[k] \\circledast_P h_N[k] = \\sum_{\\kappa = 0}^{N-1} h_N[\\kappa] \\cdot \\tilde{x}[k-\\kappa]\n",
+    "x_L[k] \\circledast_P h_N[k] = \\sum_{\\kappa=0}^{P-1} \\tilde{x}_P[k - \\kappa] \\; \\tilde{h}_P[\\kappa]\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\tilde{x}[k]$ denotes the periodic summation of $x_L[k]$ with period $P$\n",
+    "where $\\circledast_P$ denotes the periodic convolution with period $P$. The periodic summations $\\tilde{x}_P[k]$ of $x[k]$ and $\\tilde{h}_P[k]$ of $h[k]$ with period $P$ are defined as\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\tilde{x}[k] = \\sum_{\\nu = -\\infty}^{\\infty} x_L[k - \\nu P]\n",
-    "\\end{equation}\n",
+    "\\begin{align}\n",
+    "\\tilde{x}_P[k] &= \\sum_{\\nu = -\\infty}^{\\infty} x_L[\\nu \\cdot P + k] \\\\\n",
+    "\\tilde{h}_P[k] &= \\sum_{\\nu = -\\infty}^{\\infty} h_N[\\nu \\cdot P + k]\n",
+    "\\end{align}\n",
     "\n",
-    "The result of the circular convolution is periodic with period $P$. To compute the linear convolution by a periodic convolution, one has to take care that the result of the linear convolution fits into one period of the periodic convolution. Hence, the periodicity has to be chosen as $P \\geq M$ where $M = N+L-1$. This can be achieved by zero-padding of $x_L[k]$ to the total length $M$ resulting in the signal $x_M[k]$ of length $M$ which is defined as\n",
+    "The result of the circular convolution has a period of $P$.\n",
+    "\n",
+    "\n",
+    "To compute the linear convolution by a periodic convolution, one has to take care that the result of the linear convolution fits into one period of the periodic convolution. Hence, the periodicity has to be chosen as $P \\geq M$ where $M = N+L-1$. This can be achieved by zero-padding of $x_L[k]$ to the total length $M$ resulting in the signal $x_M[k]$ of length $M$ which is defined as\n",
     "\n",
     "\\begin{equation}\n",
     "x_M[k] = \\begin{cases} \n",
@@ -88,10 +92,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tools import cconv\n",
+    "%matplotlib inline\n",
     "\n",
     "L = 8  # length of signal x[k]\n",
     "N = 10  # length of signal h[k]\n",
@@ -104,7 +108,7 @@
     "# linear convolution\n",
     "y1 = np.convolve(x, h, 'full')\n",
     "# periodic convolution\n",
-    "y2 = cconv(x, h, P)\n",
+    "y2 = cconv(x, h, int(P))\n",
     "# linear convolution via periodic convolution\n",
     "xp = np.append(x, np.zeros(N-1))\n",
     "hp = np.append(h, np.zeros(L-1))\n",
@@ -197,7 +201,7 @@
     "plt.figure(figsize=(10, 3))\n",
     "plt.stem(y)\n",
     "plt.xlabel('k')\n",
-    "plt.ylabel('y[k]');"
+    "plt.ylabel('y[k]')"
    ]
   },
   {
@@ -206,7 +210,7 @@
    "source": [
     "### Benchmark\n",
     "\n",
-    "It was already argued that the numerical complexity of the fast convolution is considerably lower due to the usage of the FFT. As measure, the gain in terms of execution time with respect to the linear convolution is evaluated in the following. Both algorithms are executed for the convolution of two real-valued signals $x_L[k]$ and $h_N[k]$ of length $L=N=2^n$ for $n \\in \\mathbb{N}$. The length of the FFTs/IFFT was chosen as $M=2^{n+1}$. The results depend heavily on the implementation of the FFT and the hardware used. Note that the execution of the following script may take some time."
+    "It was already argued that the numerical complexity of the fast convolution is considerably lower due to the usage of the FFT. As measure, the gain in terms of execution time with respect to the linear convolution is evaluated in the following. Both algorithms are executed for the convolution of two real-valued signals $x_L[k]$ and $h_N[k]$ of length $L=N=2^n$ for $n \\in \\mathbb{N}$. The length of the FFTs/IFFT was chosen as $M=2^{n+1}$. The results depend heavily on the implementation of the FFT and the hardware used. Note that the execution of the following cell may take some time."
    ]
   },
   {
@@ -218,7 +222,7 @@
     "import timeit\n",
     "\n",
     "n = np.arange(17)  # lengths = 2**n to evaluate\n",
-    "reps = 20  # number of repetitions for timeit\n",
+    "reps = 100  # number of repetitions for timeit\n",
     "\n",
     "gain = np.zeros(len(n))\n",
     "for N in n:\n",
@@ -234,8 +238,7 @@
     "    gain[N] = tc/tf\n",
     "\n",
     "# show the results\n",
-    "plt.figure(figsize = (15, 10))\n",
-    "plt.barh(n-.5, gain, log=True)\n",
+    "plt.barh(n, gain, log=True)\n",
     "plt.plot([1, 1], [-1, n[-1]+1], 'r-')\n",
     "plt.yticks(n, 2**n)\n",
     "plt.xlabel('Gain of fast convolution')\n",
@@ -283,10 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
-  },
-  "nbsphinx": {
-   "execute": "never"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
