--- a/discrete_fourier_transform/properties.ipynb
+++ b/discrete_fourier_transform/properties.ipynb
@@ -64,13 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.linalg import dft\n",
+    "%matplotlib inline\n",
+    "\n",
     "\n",
     "def rect(k, N):\n",
     "    return np.where((0 <= k) & (k < N), 1.0, 0.0)\n",
+    "\n",
     "\n",
     "N = 16\n",
     "M = 8\n",
@@ -82,7 +84,7 @@
     "X = np.matmul(F, x)\n",
     "xr = np.matmul(IF, X)\n",
     "\n",
-    "plt.figure(figsize=(10,3))\n",
+    "plt.figure(figsize=(10, 3))\n",
     "plt.subplot(1, 3, 1)\n",
     "plt.stem(x)\n",
     "plt.xlabel('$k$')\n",
@@ -97,7 +99,7 @@
     "plt.subplot(1, 3, 3)\n",
     "plt.stem(np.real(xr))\n",
     "plt.xlabel('$k$')\n",
-    "plt.ylabel(r'$\\mathrm{IDFT}_N {X[\\mu]}$')\n",
+    "plt.ylabel(r'$\\mathrm{IDFT}_N \\{X[\\mu]\\}$')\n",
     "plt.ylim([-.1, 1.1])\n",
     "plt.tight_layout()"
    ]
@@ -221,7 +223,7 @@
     "\\tilde{x}_\\text{o}[k] = - \\tilde{x}_\\text{o}[-k]\n",
     "\\end{equation}\n",
     "\n",
-    "Using these definitions signal $x[k]$ can be decomposed into its even and odd part\n",
+    "Using these definitions the signal $x[k]$ can be decomposed into its even and odd part\n",
     "\n",
     "\\begin{align}\n",
     "x_\\text{e}[k] &= \\frac{1}{2} \\left( \\tilde{x}[k] + \\tilde{x}[-k] \\right) \\\\\n",
@@ -350,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
