--- a/discrete_fourier_transform/theorems.ipynb
+++ b/discrete_fourier_transform/theorems.ipynb
@@ -35,36 +35,29 @@
    "source": [
     "#### Periodic Convolution\n",
     "\n",
-    "The [periodic (or circular/cyclic) convolution](https://en.wikipedia.org/wiki/Circular_convolution) of two aperiodic signals $h[k]$ and $g[k]$ is defined as\n",
+    "The [periodic (or circular/cyclic) convolution](https://en.wikipedia.org/wiki/Circular_convolution) of two finite-length signals $x[k]$ and $h[k]$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
-    "h[k] \\circledast_N g[k] = \\sum_{\\kappa = -\\infty}^{\\infty} h[\\kappa] \\cdot \\tilde{g}[k-\\kappa]\n",
+    "x[k] \\circledast_P h[k] = \\sum_{\\kappa=0}^{P-1} \\tilde{x}_P[k - \\kappa] \\; \\tilde{h}_P[\\kappa]\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\tilde{g}[k]$ denotes the periodic summation of $g[k]$ with period $N$\n",
+    "where $\\circledast_P$ denotes the periodic convolution with period $P$. The periodic summations $\\tilde{x}_P[k]$ of $x[k]$ and $\\tilde{h}_P[k]$ of $h[k]$ with period $P$ are defined as\n",
     "\n",
-    "\\begin{equation}\n",
-    "\\tilde{g}[k] = \\sum_{\\nu = -\\infty}^{\\infty} g[k - \\nu N]\n",
-    "\\end{equation}\n",
+    "\\begin{align}\n",
+    "\\tilde{x}_P[k] &= \\sum_{\\nu = -\\infty}^{\\infty} x[\\nu \\cdot P + k] \\\\\n",
+    "\\tilde{h}_P[k] &= \\sum_{\\nu = -\\infty}^{\\infty} h[\\nu \\cdot P + k]\n",
+    "\\end{align}\n",
     "\n",
-    "The result of the periodic convolution is periodic with period N. If the signal $h[k]$ is causal and of finite length $N$, the infinite summation of the convolution degenerates to\n",
-    "\n",
-    "\\begin{equation}\n",
-    "h[k] \\circledast_N g[k] = \\sum_{\\kappa = 0}^{N-1} h[\\kappa] \\cdot \\tilde{g}[k-\\kappa]\n",
-    "\\end{equation}\n",
-    "\n",
-    "The same relation holds if $h[k]$ is periodic with period $N$."
+    "The result of the circular convolution has a period of $P$. The periodic convolution of two signals is in general different to their linear convolution. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Periodic vs. linear convolution**\n",
     "\n",
-    "The periodic convolution of two finite-length signals $h[k]$ and $g[k]$ can be expressed as matrix/vector multiplication $\\mathbf{y} = \\mathbf{H} \\, \\mathbf{g}$ where the matrix $ \\mathbf{H}$ is given as the [circulant matrix](https://en.wikipedia.org/wiki/Circulant_matrix) containing the samples of the signal $h[k]$ in its first column and the vector $\\mathbf{g}$ contains the samples of the signal $g[k]$. The resulting vector $\\mathbf{y}$ is composed from the samples $y[k] = h[k] \\circledast_N g[k]$ for one period $k=0,1,\\dots, N-1$ of the periodic convolution. \n",
-    "\n",
-    "This is illustrated by the numerical evaluation of the periodic convolution $y[k] = \\text{rect}_M[k] \\circledast_N \\text{rect}_M[k]$ of the rectangular signal by itself. "
+    "The periodic $y_1[k] = x[k] \\circledast_P h[k]$ and linear $y_2[k] = x[k] * h[k]$ convolution of two rectangular signals $x[k] = \\mathrm{rect}_M[k]$ and $h[k] = \\mathrm{rect}_N[k]$ is numerically evaluated. For this purpose helper functions are defined that implement the periodic summation and convolution."
    ]
   },
   {
@@ -73,36 +66,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import numpy as np\n",
-    "from scipy.linalg import circulant\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "def periodic_summation(x, P):\n",
+    "    'Zero-padding to length P or periodic summation with period P.'\n",
+    "    N = len(x)\n",
+    "    rows = int(np.ceil(N/P))\n",
+    "\n",
+    "    if (N < int(P*rows)):\n",
+    "        x = np.pad(x, (0, int(P*rows-N)), 'constant')\n",
+    "\n",
+    "    x = np.reshape(x, (rows, P))\n",
+    "\n",
+    "    return np.sum(x, axis=0)\n",
+    "\n",
+    "\n",
+    "def periodic_convolve(x, y, P):\n",
+    "    'Periodic convolution of two signals x and y with period P.'\n",
+    "    x = periodic_summation(x, P)\n",
+    "    h = periodic_summation(y, P)\n",
+    "\n",
+    "    return np.array([np.dot(np.roll(x[::-1], k+1), h) for k in range(P)], float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the signals are defined, the convolutions are computed and the signals plotted. Note, for the periodic signals $\\tilde{x}_P[k]$ and $y_1[k]$ only one period is shown."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = 32  # length of signal x[k]\n",
+    "N = 16  # length of signal h[k]\n",
+    "P = 24  # period of periodic convolution\n",
+    "\n",
     "\n",
     "def rect(k, N):\n",
     "    return np.where((0 <= k) & (k < N), 1.0, 0.0)\n",
     "\n",
     "\n",
-    "N = 16\n",
-    "M = 6\n",
+    "# generate signals\n",
+    "k = np.arange(M+N-1)\n",
+    "x = .5 * rect(k, M)\n",
+    "h = rect(k, N)\n",
     "\n",
-    "k = np.arange(N)\n",
-    "g = rect(k, M)\n",
-    "H = circulant(g)\n",
-    "y = np.matmul(H, g)\n",
+    "# periodic convolution\n",
+    "y1 = periodic_convolve(x, h, P)\n",
+    "# linear convolution\n",
+    "y2 = np.convolve(x, h, 'full')\n",
     "\n",
-    "plt.figure(figsize=(8,4))\n",
+    "# plot results\n",
+    "plt.figure()\n",
+    "plt.stem(periodic_summation(x, P), linefmt='C0-',\n",
+    "         markerfmt='C0o', label=r'$\\tilde{x}_P[k]$')\n",
+    "plt.stem(x, linefmt='C1--', markerfmt='C1.', label=r'$x[k]$')\n",
+    "plt.xlabel(r'$k$')\n",
+    "plt.xlim([0, M+N-1])\n",
+    "plt.legend()\n",
+    "plt.grid()\n",
     "\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.stem(g)\n",
-    "plt.xlabel('$k$')\n",
-    "plt.ylabel('$\\mathrm{rect}_M[k]$')\n",
-    "plt.gca().margins(y=0.1)\n",
-    "\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.stem(y)\n",
-    "plt.xlabel('$k$')\n",
-    "plt.ylabel('$y[k]$');\n",
-    "plt.gca().margins(y=0.1)"
+    "plt.figure()\n",
+    "plt.stem(y1, linefmt='C1-', markerfmt='C1o',\n",
+    "         label=r'periodic convolution $P={}$'.format(P))\n",
+    "plt.stem(y2, linefmt='C0--', markerfmt='C0.', label=r'linear convolution')\n",
+    "plt.xlabel(r'$k$')\n",
+    "plt.xlim([0, M+N-1])\n",
+    "plt.legend()\n",
+    "plt.grid()"
    ]
   },
   {
@@ -111,8 +150,8 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Change the length $M$ of the rectangular signal. How does the result of the periodic convolution change?\n",
-    "* Compare the result of the periodic convolution with the result of the linear convolution. For which values of $M$ is the result the same?"
+    "* Change the length $M$ of the rectangular signal $x[k]$. How does the result of the periodic convolution change?\n",
+    "* Compare the result of the periodic convolution with the result of the linear convolution. For which values of $P$ are both the same?"
    ]
   },
   {
@@ -132,13 +171,14 @@
     "The theorem can be proven by introducing the definition of the periodic convolution into the [definition of the DFT](definition.ipynb) and changing the order of summation\n",
     "\n",
     "\\begin{align}\n",
-    "\\text{DFT} \\{ x[k] \\circledast_N y[k] \\} &= \\sum_{k = 0}^{N-1} \\left( \\sum_{\\kappa = 0}^{N-1} x[\\kappa] \\cdot \\tilde{y}[k - \\kappa] \\right) w_N^{\\mu k}  \\\\\n",
-    "&= \\sum_{\\kappa = 0}^{N-1} \\left( \\sum_{k = 0}^{N-1} \\tilde{y}[k - \\kappa] \\, w_N^{\\mu k} \\right) x[\\kappa] \\\\\n",
-    "&= Y[\\mu] \\cdot \\sum_{\\kappa = 0}^{N-1} x[\\kappa] \\, w_N^{\\mu \\kappa} \\\\\n",
+    "\\text{DFT}_N \\{ x[k] \\circledast_N y[k] \\} &= \\sum_{k = 0}^{N-1} \\left( \\sum_{\\kappa = 0}^{N-1} \\tilde{x}_N[\\kappa] \\cdot \\tilde{y}_N[k - \\kappa] \\right) w_N^{\\mu k}  \\\\\n",
+    "&= \\sum_{\\kappa = 0}^{N-1} \\left( \\sum_{k = 0}^{N-1} \\tilde{y}_N[k - \\kappa] \\, w_N^{\\mu k} \\right) \\tilde{x}_N[\\kappa] \\\\\n",
+    "&= Y[\\mu] \\cdot \\sum_{\\kappa = 0}^{N-1} \\tilde{x}_N[\\kappa] \\, w_N^{\\mu \\kappa} \\\\\n",
     "&= Y[\\mu] \\cdot X[\\mu]\n",
     "\\end{align}\n",
     "\n",
-    "It can be concluded from the convolution theorem that a scalar multiplication of the two spectra results in a circular convolution of the corresponding signals. For a linear time-invariant (LTI) system, the output signal is given as the linear convolution of the input signal $x[k]$ with the impulse response $h[k] = \\mathcal{H} \\{ \\delta[k] \\}$. The convolution theorem cannot be applied straightforward for the computation of the output signal of an LTI system. The [fast convolution technique](fast_convolution.ipynb) introduced later provides an efficient algorithm for the linear convolution of two signals using the convolution theorem."
+    "Note, $\\text{DFT}_N \\{ x[k] \\} = \\text{DFT}_N \\{ \\tilde{x}_N[k] \\}$ due to the periodicity of the DFT.\n",
+    "It can be concluded from the convolution theorem that a scalar multiplication of the two spectra results in a periodic convolution of the corresponding signals. For a linear time-invariant (LTI) system, the output signal is given as the linear convolution of the input signal $x[k]$ with the impulse response $h[k] = \\mathcal{H} \\{ \\delta[k] \\}$. The convolution theorem cannot be applied straightforward to the computation of the output signal of an LTI system. The [fast convolution technique](fast_convolution.ipynb) introduced later provides an efficient algorithm for the linear convolution of two signals using the convolution theorem."
    ]
   },
   {
@@ -174,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Shifting a signal in the spectral domain**\n",
     "\n",
     "A cosine signal $x[k] = \\cos(\\Omega_0 k)$ is shifted in the spectral domain by multiplying its spectrum $X[\\mu] = \\text{DFT}_N \\{ x[k] \\}$ with $e^{-j \\mu \\frac{2 \\pi}{N} \\kappa}$ followed by an IDFT."
    ]
@@ -187,25 +227,30 @@
    "source": [
     "from scipy.linalg import dft\n",
     "\n",
-    "N = 16\n",
-    "M = 1\n",
-    "kappa = 2\n",
+    "N = 16  # length of signals/DFT\n",
+    "M = 1  # number of periods for cosine\n",
+    "kappa = 2  # shift\n",
     "\n",
+    "# generate signal\n",
     "W0 = M * 2*np.pi/N\n",
     "k = np.arange(N)\n",
     "x = np.cos(W0 * k)\n",
     "\n",
+    "# compute DFT\n",
     "F = dft(N)\n",
     "mu = np.arange(N)\n",
     "X = np.matmul(F, x)\n",
+    "\n",
+    "# shift in spectral domain and IDFT\n",
     "X2 = X * np.exp(-1j * mu * 2*np.pi/N * kappa)\n",
     "IF = 1/N * np.conjugate(np.transpose(F))\n",
     "x2 = np.matmul(IF, X2)\n",
     "\n",
-    "plt.stem(k, x, linefmt='b-', markerfmt='bo', label='$x[k]$')\n",
-    "plt.stem(k, np.real(x2), linefmt='r-', markerfmt='ro', label='$x[k - \\kappa]$')\n",
+    "# plot signals\n",
+    "plt.stem(k, x, linefmt='C0-', markerfmt='C0o', label='$x[k]$')\n",
+    "plt.stem(k, np.real(x2), linefmt='C1-', markerfmt='C1o', label='$x[k - {}]$'.format(kappa))\n",
     "plt.xlabel('$k$')\n",
-    "plt.legend(loc=9);"
+    "plt.legend(loc=9)"
    ]
   },
   {
@@ -224,7 +269,7 @@
     "&= X[\\mu] \\circledast_N Y[\\mu]\n",
     "\\end{align}\n",
     "\n",
-    "where $Y[\\mu] = \\text{IDFT}_N \\{ y[k] \\}$ and $k, \\mu = 0,1,\\dots,N-1$. The DFT of a multiplication of two signals $x[k] \\cdot y[k]$ is given by the periodic convolution of their spectra $X[\\mu]$ and $Y[\\mu]$ weighted by $\\frac{1}{N}$. The periodic convolution has a period of $N$ and it is performed with respect to the normalized angular frequency $\\mu$.\n",
+    "where $Y[\\mu] = \\text{IDFT}_N \\{ y[k] \\}$ and $k, \\mu = 0,1,\\dots,N-1$. Note, the last equality follows from the periodicity of the inverse DFT. The DFT of a multiplication of two signals $x[k] \\cdot y[k]$ is given by the periodic convolution of their spectra $X[\\mu]$ and $Y[\\mu]$ weighted by $\\frac{1}{N}$. The periodic convolution has a period of $N$ and it is performed with respect to the frequency index $\\mu$.\n",
     "\n",
     "Applications of the multiplication theorem include the modulation and windowing of signals. The former leads to the modulation theorem introduced in the following."
    ]
@@ -238,7 +283,7 @@
     "The complex modulation of a signal $x[k]$ is defined as $e^{j \\Omega_0 k} \\cdot x[k]$ with $\\Omega_0 = M \\frac{2 \\pi}{N}$, $M \\in \\mathbb{Z}$. The DFT of the modulated signal is derived by applying the multiplication theorem\n",
     "\n",
     "\\begin{equation}\n",
-    "\\text{DFT} \\left\\{ e^{j M \\frac{2 \\pi}{N} k} \\cdot x[k] \\right\\} = \\delta[\\mu - M]  \\circledast_N X[\\mu] = X[\\mu - M]\n",
+    "\\text{DFT}_N \\left\\{ e^{j M \\frac{2 \\pi}{N} k} \\cdot x[k] \\right\\} = \\delta[\\mu - M]  \\circledast_N X[\\mu] = X[\\mu - M]\n",
     "\\end{equation}\n",
     "\n",
     "where $X[\\mu] = \\text{DFT}_N \\{ x[k] \\}$ and $X[\\mu - M]$ denotes the periodic shift of $X[\\mu]$.  Above result states that the complex modulation of a signal leads to a periodic shift of its spectrum. This result is known as modulation theorem."
@@ -248,9 +293,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Decimation of a signal**\n",
     "\n",
-    "An example for the application of the modulation theorem is the [downsampling/decimation](https://en.wikipedia.org/wiki/Decimation_(signal_processing&#041;) of a discrete signal $x[k]$. Downsampling refers to lowering the sampling rate of a signal. The example focuses on the special case of removing every second sample, hence halving the sampling rate. The downsampling is modeled by defining a signal $x_\\frac{1}{2}[k]$ where every second sample is set to zero\n",
+    "An example for the application of the modulation theorem is the [downsampling/decimation](https://en.wikipedia.org/wiki/Decimation_(signal_processing)) of a discrete signal $x[k]$. Downsampling refers to lowering the sampling rate of a signal. The example focuses on the special case of removing every second sample, hence halving the sampling rate. The downsampling is modeled by defining a signal $x_\\frac{1}{2}[k]$ where every second sample is set to zero\n",
     "\n",
     "\\begin{equation}\n",
     "x_\\frac{1}{2}[k] = \\begin{cases} \n",
@@ -286,9 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
-    "\n",
-    "The subsampling of a complex exponential signal is illustrated in the following. The signal $x[k] = \\cos (\\Omega_0 k)$ is subsampled by setting every second sample to zero. The DFT of the original signal and subsampled signal is computed and their magnitude is plotted for illustration."
+    "The decimation of a complex exponential signal is illustrated in the following. The signal $x[k] = \\cos (\\Omega_0 k)$ is decimated by setting every second sample to zero. The DFT of the original signal and decimated signal is computed and their magnitudes are plotted for illustration."
    ]
   },
   {
@@ -297,8 +340,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 16\n",
-    "M = 3.3\n",
+    "N = 16  # length of signals/DFT\n",
+    "M = 3.3  # number of periods for cosine\n",
     "\n",
     "W0 = M*2*np.pi/N\n",
     "k = np.arange(N)\n",
@@ -393,9 +436,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
