Added link between periodic and cyclic convolution

--- a/discrete_fourier_transform/theorems.ipynb
+++ b/discrete_fourier_transform/theorems.ipynb
@@ -38,7 +38,8 @@
     "The [periodic (or circular/cyclic) convolution](https://en.wikipedia.org/wiki/Circular_convolution) of two finite-length signals $x[k]$ and $h[k]$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
-    "x[k] \\circledast_P h[k] = \\sum_{\\kappa=0}^{P-1} \\tilde{x}_P[k - \\kappa] \\; \\tilde{h}_P[\\kappa]\n",
+    "x[k] \\circledast_P h[k] = \\sum_{\\kappa=0}^{P-1} \\tilde{x}_P[k - \\kappa] \\; \\tilde{h}_P[\\kappa] =\n",
+    "\\sum_{\\kappa=0}^{P-1} \\tilde{x}_P[\\kappa] \\; \\tilde{h}_P[k - \\kappa]\n",
     "\\end{equation}\n",
     "\n",
     "where $\\circledast_P$ denotes the periodic convolution with period $P$. The periodic summations $\\tilde{x}_P[k]$ of $x[k]$ and $\\tilde{h}_P[k]$ of $h[k]$ with period $P$ are defined as\n",
@@ -48,7 +49,9 @@
     "\\tilde{h}_P[k] &= \\sum_{\\nu = -\\infty}^{\\infty} h[\\nu \\cdot P + k]\n",
     "\\end{align}\n",
     "\n",
-    "The result of the circular convolution has a period of $P$. The periodic convolution of two signals is in general different to their linear convolution. "
+    "The result of the circular convolution has a period of $P$. The periodic convolution of two signals is in general different to their linear convolution.\n",
+    "\n",
+    "For the special case that the length of one or both of the signals $x[k]$ and $h[k]$ is smaller or equal to the period $P$, the periodic summation degenerates to a periodic continuation of the signal(s). Furthermore, the periodic continuation does only have to be performed for the shifted signal in above convolution sum. For this special case, the periodic convolution is often termed as **cyclic convolution**."
    ]
   },
   {
@@ -160,7 +163,7 @@
    "source": [
     "#### Convolution Theorem\n",
     "\n",
-    "The convolution theorem states that the DFT of the periodic convolution of two discrete signals $x[k]$ and $y[k]$ is equal to the scalar multiplication of their DFTs $X[\\mu] = \\text{DFT}_N \\{ x[k] \\}$ and $Y[\\mu] = \\text{DFT}_N \\{ y[k] \\}$\n",
+    "The convolution theorem states that the DFT of the cyclic convolution of two discrete signals $x[k]$ and $y[k]$ is equal to the scalar multiplication of their DFTs $X[\\mu] = \\text{DFT}_N \\{ x[k] \\}$ and $Y[\\mu] = \\text{DFT}_N \\{ y[k] \\}$\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{DFT}_N \\{ x[k] \\circledast_N y[k] \\} = X[\\mu] \\cdot Y[\\mu]\n",
@@ -178,7 +181,7 @@
     "\\end{align}\n",
     "\n",
     "Note, $\\text{DFT}_N \\{ x[k] \\} = \\text{DFT}_N \\{ \\tilde{x}_N[k] \\}$ due to the periodicity of the DFT.\n",
-    "It can be concluded from the convolution theorem that a scalar multiplication of the two spectra results in a periodic convolution of the corresponding signals. For a linear time-invariant (LTI) system, the output signal is given as the linear convolution of the input signal $x[k]$ with the impulse response $h[k] = \\mathcal{H} \\{ \\delta[k] \\}$. The convolution theorem cannot be applied straightforward to the computation of the output signal of an LTI system. The [fast convolution technique](fast_convolution.ipynb) introduced later provides an efficient algorithm for the linear convolution of two signals using the convolution theorem."
+    "It can be concluded from the convolution theorem that a scalar multiplication of the two spectra results in a cyclic convolution of the corresponding signals. For a linear time-invariant (LTI) system, the output signal is given as the linear convolution of the input signal $x[k]$ with the impulse response $h[k] = \\mathcal{H} \\{ \\delta[k] \\}$. The convolution theorem cannot be applied straightforward to the computation of the output signal of an LTI system. The [fast convolution technique](fast_convolution.ipynb), introduced later, provides an efficient algorithm for the linear convolution of two signals based on the convolution theorem."
    ]
   },
   {
@@ -187,13 +190,13 @@
    "source": [
     "### Shift Theorem\n",
     "\n",
-    "Since the convolution theorem of the DFT is given in terms of the periodic convolution, the shift theorem of the DFT is given in terms of the periodic shift. The [periodic (circular) shift](https://en.wikipedia.org/wiki/Circular_shift) of a causal signal $x[k]$ of finite length $N$ can be expressed by a periodic convolution with a shifted Dirac impulse\n",
+    "Since the convolution theorem of the DFT is given in terms of the cyclic convolution, the shift theorem of the DFT is given in terms of the periodic shift. The [periodic (circular) shift](https://en.wikipedia.org/wiki/Circular_shift) of a causal signal $x[k]$ of finite length $N$ can be expressed by a cyclic convolution with a shifted Dirac impulse\n",
     "\n",
     "\\begin{equation}\n",
     "x[k - \\kappa] = x[k] \\circledast_N \\delta[k - \\kappa]\n",
     "\\end{equation}\n",
     "\n",
-    "for $\\kappa \\in 0,1,\\dots, N-1$. This follows from the definition of the periodic convolution in combination with the sifting property of the Dirac impulse. Applying the DFT to the left- and right-hand side and exploiting the convolution theorem yields\n",
+    "for $\\kappa \\in 0,1,\\dots, N-1$. This follows from the definition of the cyclic convolution in combination with the sifting property of the Dirac impulse. Applying the DFT to the left- and right-hand side and exploiting the convolution theorem yields\n",
     "\n",
     "\\begin{equation}\n",
     "\\text{DFT}_N \\{ x[k - \\kappa] \\} = X[\\mu] \\cdot e^{-j \\mu \\frac{2 \\pi}{N} \\kappa}\n",
@@ -269,7 +272,7 @@
     "&= X[\\mu] \\circledast_N Y[\\mu]\n",
     "\\end{align}\n",
     "\n",
-    "where $Y[\\mu] = \\text{IDFT}_N \\{ y[k] \\}$ and $k, \\mu = 0,1,\\dots,N-1$. Note, the last equality follows from the periodicity of the inverse DFT. The DFT of a multiplication of two signals $x[k] \\cdot y[k]$ is given by the periodic convolution of their spectra $X[\\mu]$ and $Y[\\mu]$ weighted by $\\frac{1}{N}$. The periodic convolution has a period of $N$ and it is performed with respect to the frequency index $\\mu$.\n",
+    "where $Y[\\mu] = \\text{IDFT}_N \\{ y[k] \\}$ and $k, \\mu = 0,1,\\dots,N-1$. Note, the last equality follows from the periodicity of the inverse DFT. The DFT of a multiplication of two signals $x[k] \\cdot y[k]$ is given by the cyclic convolution of their spectra $X[\\mu]$ and $Y[\\mu]$ weighted by $\\frac{1}{N}$. The cyclic convolution has a period of $N$ and it is performed with respect to the frequency index $\\mu$.\n",
     "\n",
     "Applications of the multiplication theorem include the modulation and windowing of signals. The former leads to the modulation theorem introduced in the following."
    ]
@@ -392,11 +395,11 @@
     "\\text{DFT}_N \\{ x[k] \\cdot x^*[k] \\} = \\frac{1}{N} \\cdot X[\\mu] \\circledast_{N} X^*[N -\\mu]\n",
     "\\end{equation}\n",
     "\n",
-    "Introducing the definition of the DFT and the periodic convolution yields\n",
+    "Introducing the definition of the DFT and the cyclic convolution yields\n",
     "\n",
     "\\begin{equation}\n",
     "\\sum_{k = 0}^{N-1} x[k] \\cdot x^*[k] \\, w_N^{\\mu k}  =\n",
-    "\\frac{1}{N} \\sum_{\\nu = 0}^{N-1} X[\\nu] \\cdot \\tilde{X}^*[N-\\mu-\\nu]\n",
+    "\\frac{1}{N} \\sum_{\\nu = 0}^{N-1} \\tilde{X}[\\nu] \\cdot \\tilde{X}^*[N-\\mu-\\nu]\n",
     "\\end{equation}\n",
     "\n",
     "Setting $\\mu = 0$ followed by the substitution $\\nu = \\mu$ yields Parseval's theorem\n",
